(#26) Fixed recaptcha field title not showing in post comment form

--- a/public/css/recaptcha-for-woocommerce-public.css
+++ b/public/css/recaptcha-for-woocommerce-public.css
@@ -1,12 +1,21 @@
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
+# Global
 # Themes Specific
     # Twentytwenty
 /*--------------------------------------------------------------
 
+
 /*--------------------------------------------------------------
-# Twentytwenty
+# Global
+--------------------------------------------------------------*/
+label[for=comment_captcha] {
+    display: block !important;
+}
+
+/*--------------------------------------------------------------
+## Twentytwenty
 --------------------------------------------------------------*/
 .theme-twentytwenty #review_form .woo-comment-captcha {
     max-width: 58rem;
